# hot-plate

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  MatrixWriter.hpp
src/assertion/: CMakeLists.txt  assertion.cpp  assertion.hpp
src/example_1/: CMakeLists.txt  CardinalDirection.hpp  Coordinate.hpp  Parameters.cpp  Parameters.hpp  RandomWalkerSimulation.cpp  RandomWalkerSimulation.hpp  Walker.cpp  Walker.hpp  main.cpp
src/example_1/analytic_solution/: solution.m
